--- a/content/data/config.json
+++ b/content/data/config.json
@@ -159,5 +159,6 @@
         "anncmnt_is_home_only": true,
         "anncmnt_has_close": true,
         "anncmnt_id": "new-features"
-    }
+    },
+    "domain": "https://knowledgeable-hedgehog-8ff22.netlify.app"
 }
